--- a/css/styles.css
+++ b/css/styles.css
@@ -235,7 +235,7 @@ label {
 }
 
 .fluid-padding {
-  padding: var(--space-2) clamp(var(--space-1), 4vw, var(--space-3));
+  padding: var(--padding-block, var(--space-2)) clamp(var(--space-1), 4vw, var(--space-3));
 }
 
 .text-center {
@@ -280,8 +280,10 @@ label {
   width: 1px;
   height: 1px;
   white-space: nowrap;
+  color: var(--clr-black);
   clip: rect(0, 0, 0, 0);
   clip-path: inset(50%);
+  background-color: var(--clr-white);
 }
 
 /* -------------- Links / Buttons ------------- */
@@ -349,6 +351,45 @@ label {
 .logo {
   max-width: 200px;
   height: fit-content;
+}
+
+.card {
+  overflow: hidden;
+  border-radius: var(--border-radius);
+  box-shadow: 0 0 7px 0 var(--clr-light-shadow);
+  background-color: var(--clr-white);
+}
+
+.blog-card {
+  scroll-snap-align: start;
+  border: 1px solid var(--clr-deep-black);
+}
+
+.blog-card__link:is(:hover, :focus) .blog-card__content__title {
+  text-decoration: underline;
+  text-underline-offset: 4px;
+}
+
+.blog-card__link:is(:hover, :focus) .blog-card__image {
+  transform: scale(1.1);
+}
+
+.blog-card__image {
+  max-height: 200px;
+  transition: transform var(--tr-ease-in-out);
+}
+
+.blog-card__content {
+  padding: var(--space-1);
+}
+
+.blog-card__category {
+  inset: 0 auto auto 0;
+  padding: var(--space-0-5);
+  font-weight: var(--fw-semibold);
+  color: var(--clr-white);
+  border-bottom-right-radius: var(--border-radius);
+  background-color: var(--clr-deep-black);
 }
 
 /* ------------------ Header ------------------ */
@@ -474,7 +515,62 @@ footer {
   max-width: 360px;
 }
 
+/* ----------------- Carousel ----------------- */
+
+.carousel {
+  grid-auto-flow: column;
+  grid-auto-columns: 100%;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+  scroll-snap-type: x mandatory;
+}
+
+.carousel::-webkit-scrollbar {
+  display: none;
+}
+
+.prev-button,
+.next-button {
+  padding: 0;
+}
+
+.pagination__btn {
+  padding: var(--space-0-5);
+  cursor: pointer;
+  border: 1px solid var(--clr-dark-orange);
+  border-radius: 50%;
+}
+
+.active-pagination {
+  background-color: var(--clr-dark-orange);
+}
+
+/* ------------- Newsletter Signup ------------ */
+
+.newsletter {
+  --padding-block: var(--space-3);
+  --wrap-style: wrap-reverse;
+}
+
+.newsletter > div {
+  flex: 1 1 300px;
+}
+
 /* --------------- Media Queries -------------- */
+
+@media (min-width: 480px) {
+  /* ----------------- Home Page ---------------- */
+  /* ----------------- Carousel ----------------- */
+
+  .carousel {
+    grid-auto-columns: calc((100% - var(--space-1)) / 2);
+  }
+
+  .pagination {
+    display: flex;
+  }
+}
 
 @media (min-width: 768px) {
   /* ------------------ Utility ----------------- */
@@ -517,6 +613,16 @@ footer {
     place-self: center end;
   }
 
+  /* ----------------- Carousel ----------------- */
+
+  .carousel {
+    grid-auto-columns: calc((100% - var(--space-1) * 2) / 3);
+  }
+
+  .pagination :nth-child(n + 5) {
+    display: none;
+  }
+
   /* ------------------ Footer ------------------ */
 
   .footer__container {
@@ -535,5 +641,18 @@ footer {
 
   .footer__icons {
     grid-area: 1 / 2;
+  }
+}
+
+@media (min-width: 1024px) {
+  /* ----------------- Home Page ---------------- */
+  /* ----------------- Carousel ----------------- */
+
+  .carousel {
+    grid-auto-columns: calc((100% - var(--space-1) * 3) / 4);
+  }
+
+  .pagination :nth-child(n + 4) {
+    display: none;
   }
 }
