--- a/css/imports/_theme.css
+++ b/css/imports/_theme.css
@@ -9,6 +9,7 @@
   --clr-dark-gray: #1b1b1b;
   --clr-gray: #393939;
   --clr-light-gray: #fafafa;
+  --clr-soft-gray: #e7e7e7;
   --clr-light-orange: #f68a50;
   --clr-dark-orange: #9d3700;
   --clr-red: #b50000;
