--- a/css/imports/_utility.css
+++ b/css/imports/_utility.css
@@ -3,7 +3,7 @@
 /* -------------------------------------------- */
 
 .container {
-  width: min(var(--max-width), 100% - (var(--screen-edge) * 2));
+  width: min(var(--container-width), 100% - (var(--screen-edge) * 2));
   margin-inline: auto;
 }
 
