--- a/css/imports/_ui.css
+++ b/css/imports/_ui.css
@@ -50,11 +50,12 @@ header {
 /* -------------------------------------------- */
 
 .hero {
-  min-height: 300px;
+  height: 300px;
   color: var(--clr-white);
 }
 
 .home-hero {
+  height: auto;
   background-color: var(--clr-black);
 }
 
@@ -137,7 +138,6 @@ footer {
 /* ----------------- Carousel ----------------- */
 
 .carousel {
-  min-height: 200px;
   grid-auto-flow: column;
   grid-auto-columns: 100%;
   overflow-x: auto;
@@ -159,7 +159,6 @@ footer {
   padding: var(--space-0-5);
   cursor: pointer;
   border: 1px solid var(--clr-dark-orange);
-  border-radius: 50%;
 }
 
 .active-pagination {
@@ -179,7 +178,6 @@ footer {
 /* --------------- Blog Listing --------------- */
 
 .blog-list {
-  min-height: 200px;
   grid-template-columns: repeat(auto-fit, minmax(min(420px, 100%), 1fr));
 }
 
@@ -192,9 +190,50 @@ footer {
 }
 
 .bx-search-alt-2 {
-  top: calc(50% - 0.3rem);
+  top: calc(50% - var(--space-0-3));
   left: var(--space-0-5);
   transform: translateY(-50%);
+}
+
+/* ----------------- Blog Post ---------------- */
+
+.blog-post__content {
+  margin-top: -8rem;
+  flex: 1 1 350px;
+}
+
+.blog-post__meta {
+  max-height: 24px;
+  --bullet-space: var(--space-0-3);
+}
+
+/* Blog Post Article */
+
+.blog-post__article p:first-of-type {
+  font-weight: var(--fw-bold);
+}
+
+.blog-post__article img {
+  max-height: 400px;
+}
+
+/* Blog Post Aside */
+
+.blog-post__aside {
+  position: sticky;
+  top: calc(var(--height-header) + var(--space-1));
+  min-width: min(350px, 100%);
+  height: 100%;
+  flex: 1 1 50px;
+}
+
+.popular-posts,
+.post-search {
+  padding: var(--space-1-5) var(--space-2);
+}
+
+.popular-posts__image {
+  max-width: 75px;
 }
 
 /* ----------------- Reach Out ---------------- */
