WIP Image modal

--- a/css/imports/_components.css
+++ b/css/imports/_components.css
@@ -1,5 +1,5 @@
 /* -------------------------------------------- */
-/*              Reusable Components             */
+/*                  Components                  */
 /* -------------------------------------------- */
 
 .logo {
@@ -74,4 +74,54 @@
   height: fit-content;
   padding: var(--space-1);
   border: 4px solid var(--clr-red);
+}
+
+/* ------------------- Modal ------------------ */
+
+.modal {
+  margin: auto;
+  border: none;
+}
+
+.modal::backdrop {
+  backdrop-filter: blur(2px);
+  background-color: var(--clr-medium-shadow, rgba(0, 0, 0, 0.7));
+}
+
+.modal[open],
+.modal[open]::backdrop {
+  animation: fadeIn var(--tr-ease-in-out, 200ms ease-in-out);
+}
+
+.modal.modal-close[open],
+.modal.modal-close[open]::backdrop {
+  animation: fadeOut var(--tr-ease-in-out, 200ms ease-in-out);
+}
+
+.modal__image {
+  max-height: 90vh;
+}
+
+.modal__btn {
+  inset: var(--space-1-5) var(--space-1-5) auto auto;
+  padding: var(--space-0-3);
+  background-color: var(--clr-deep-black);
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
