--- a/css/imports/_theme.css
+++ b/css/imports/_theme.css
@@ -35,6 +35,7 @@
 
   --space-0-3: 0.3rem;
   --space-0-5: 0.5rem;
+  --space-0-7: 0.7rem;
   --space-1: 1rem;
   --space-1-5: 1.5rem;
   --space-2: 2rem;
@@ -149,6 +150,7 @@ textarea {
 
 textarea {
   min-height: 120px;
+  vertical-align: top;
   resize: none;
 }
 
