--- a/css/imports/_ui.css
+++ b/css/imports/_ui.css
@@ -208,10 +208,14 @@ footer {
   padding-left: var(--space-2);
 }
 
-.bx-search-alt-2 {
+.search-input__icon {
   top: calc(50% - var(--space-0-3));
   left: var(--space-0-5);
   transform: translateY(-50%);
+}
+
+.btn-show-more {
+  margin-inline: auto;
 }
 
 /* ----------------- Blog Post ---------------- */
