--- a/css/imports/_theme.css
+++ b/css/imports/_theme.css
@@ -13,6 +13,7 @@
   --clr-light-orange: #f68a50;
   --clr-dark-orange: #9d3700;
   --clr-red: #b50000;
+  --clr-green: #155821;
 
   --clr-dark-shadow: rgba(0, 0, 0, 0.9);
   --clr-medium-shadow: rgba(0, 0, 0, 0.7);
