--- a/css/imports/_components.css
+++ b/css/imports/_components.css
@@ -76,6 +76,7 @@
 .error-message {
   width: fit-content;
   height: fit-content;
+  margin-block: var(--space-2);
   padding: var(--space-1);
   border: 4px solid var(--clr-red);
 }
