Added an utility class

--- a/css/imports/_utility.css
+++ b/css/imports/_utility.css
@@ -107,6 +107,10 @@
   min-height: 200px;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .rounded-corners {
   border-radius: var(--border-radius);
 }
