--- a/css/imports/_components.css
+++ b/css/imports/_components.css
@@ -54,18 +54,18 @@
   background-color: var(--clr-deep-black);
 }
 
-/* ---------- Loader & Error Message ---------- */
+/* ---------- Loader & Alert Message ---------- */
 
 /* Loading Spinner
   Inspiration: https://www.w3schools.com/howto/howto_css_loader.asp */
 
 .loading-spinner,
-.error-message {
-  inset: 0;
+.alert-error {
   margin: auto;
 }
 
 .loading-spinner {
+  inset: 0;
   width: 70px;
   height: 70px;
   border: 7px solid var(--clr-soft-gray);
@@ -73,12 +73,21 @@
   animation: spin 2s linear infinite;
 }
 
-.error-message {
+.alert-error,
+.alert-success {
+  gap: var(--space-0-3);
+}
+
+.alert-error {
   width: fit-content;
   height: fit-content;
   margin-block: var(--space-2);
   padding: var(--space-1);
   border: 4px solid var(--clr-red);
+}
+
+.alert-success {
+  color: var(--clr-green);
 }
 
 /* Input Error */
@@ -97,14 +106,6 @@
 .input__error-message {
   margin: calc(var(--space-0-7) * -1) var(--space-0-3) var(--space-0-7);
   font-weight: var(--fw-semibold);
-}
-
-/* -------------- Success Message ------------- */
-
-.success-message {
-  gap: var(--space-0-3);
-  font-weight: var(--fw-bold);
-  color: var(--clr-green);
 }
 
 /* ---------------- Image Modal --------------- */
@@ -164,7 +165,6 @@
   width: 100%;
   padding: var(--space-0-5) var(--space-1);
   text-align: left;
-  cursor: pointer;
   border: 1px solid var(--clr-deep-black);
 }
 
