--- a/css/imports/_media.css
+++ b/css/imports/_media.css
@@ -5,11 +5,11 @@
 @media (min-width: 480px) {
   /* ----------------- Carousel ----------------- */
 
-  .carousel {
+  .carousel__track {
     grid-auto-columns: calc((100% - var(--space-1)) / 2);
   }
 
-  .pagination {
+  .carousel__pagination {
     display: flex;
   }
 }
@@ -56,11 +56,11 @@
 
   /* ----------------- Carousel ----------------- */
 
-  .carousel {
+  .carousel__track {
     grid-auto-columns: calc((100% - var(--space-1) * 2) / 3);
   }
 
-  .pagination :nth-child(n + 5) {
+  .carousel__pagination :nth-child(n + 5) {
     display: none;
   }
 
@@ -88,11 +88,11 @@
 @media (min-width: 1024px) {
   /* ----------------- Carousel ----------------- */
 
-  .carousel {
+  .carousel__track {
     grid-auto-columns: calc((100% - var(--space-1) * 3) / 4);
   }
 
-  .pagination :nth-child(n + 4) {
+  .carousel__pagination :nth-child(n + 4) {
     display: none;
   }
 }
