--- a/css/imports/_theme.css
+++ b/css/imports/_theme.css
@@ -87,6 +87,10 @@ textarea {
   background-color: inherit;
 }
 
+fieldset {
+  border: none;
+}
+
 /* -------------------------------------------- */
 /*                Global Elements               */
 /* -------------------------------------------- */
