--- a/css/imports/_media.css
+++ b/css/imports/_media.css
@@ -5,7 +5,7 @@
 @media (min-width: 480px) {
   /* ----------------- Carousel ----------------- */
 
-  .carousel__track {
+  .carousel__container {
     grid-auto-columns: calc((100% - var(--space-1)) / 2);
   }
 
@@ -56,7 +56,7 @@
 
   /* ----------------- Carousel ----------------- */
 
-  .carousel__track {
+  .carousel__container {
     grid-auto-columns: calc((100% - var(--space-1) * 2) / 3);
   }
 
@@ -88,7 +88,7 @@
 @media (min-width: 1024px) {
   /* ----------------- Carousel ----------------- */
 
-  .carousel__track {
+  .carousel__container {
     grid-auto-columns: calc((100% - var(--space-1) * 3) / 4);
   }
 
