--- a/css/imports/_components.css
+++ b/css/imports/_components.css
@@ -202,7 +202,7 @@
 }
 
 /* ---------------- Accordions ---------------- */
-/* Inspiration: https://www.youtube.com/watch?v=WJERnXiFFug */
+/* Inspiration: https://keithjgrant.com/posts/2023/04/transitioning-to-height-auto/ */
 
 .accordion__header {
   width: 100%;
