--- a/css/imports/_ui.css
+++ b/css/imports/_ui.css
@@ -147,7 +147,7 @@ footer {
   background-color: var(--clr-white);
 }
 
-.featured-post__container {
+.featured-post__article {
   grid-template-columns: repeat(auto-fit, minmax(min(300px, 100%), 1fr));
 }
 
