--- a/css/imports/_ui.css
+++ b/css/imports/_ui.css
@@ -78,6 +78,7 @@ header {
 
 .home-hero__image {
   height: 400px;
+  -webkit-mask-image: linear-gradient(var(--gradient-direction, to bottom), var(--clr-black) 0%, var(--clr-dark-shadow) 60%, transparent 100%);
   mask-image: linear-gradient(var(--gradient-direction, to bottom), var(--clr-black) 0%, var(--clr-dark-shadow) 60%, transparent 100%);
 }
 
