--- a/css/imports/_theme.css
+++ b/css/imports/_theme.css
@@ -106,6 +106,11 @@ body {
   background-color: var(--clr-light-gray);
 }
 
+main {
+  padding-bottom: var(--space-2-5);
+  overflow: hidden;
+}
+
 main > * {
   margin-bottom: 5rem;
 }
