More IOS testing

--- a/css/imports/_components.css
+++ b/css/imports/_components.css
@@ -127,7 +127,7 @@
 .carousel__container {
   grid-auto-flow: column;
   grid-auto-columns: 100%;
-  overflow-x: auto;
+  /* overflow-x: auto; */
   scroll-behavior: smooth;
   scrollbar-width: none;
   scroll-snap-type: x mandatory;
