--- a/css/imports/_components.css
+++ b/css/imports/_components.css
@@ -125,9 +125,10 @@
 /* Inspiration: https://www.codingnepalweb.com/draggable-card-slider-html-css-javascript/ */
 
 .carousel__container {
+  width: 100%;
   grid-auto-flow: column;
   grid-auto-columns: 100%;
-  overflow: hidden;
+  overflow-x: auto;
   scroll-behavior: smooth;
   scrollbar-width: none;
   scroll-snap-type: x mandatory;
